--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/MockedAccountLight" >
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".activity.SplashScreenActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.Settings"></activity>
+        <activity android:name=".activity.Settings" />
+        <activity
+            android:name=".activity.MainActivity"
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity android:name=".activity.LoginActivity"></activity>
     </application>
 
 </manifest>
