--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,15 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
+    buildToolsVersion '22.0.1'
     repositories {
         mavenCentral()
     }
-
     defaultConfig {
         applicationId "com.htech.restaurant"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -21,7 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    productFlavors {
+    }
+    compileOptions {
+    }
 }
 
 
